--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
     "dotenv": "16.0.1",
     "express": "4.18.1",
     "helmet": "5.1.1",
+    "openpay": "1.0.5",
     "validator": "13.7.0",
     "winston": "3.8.1",
     "xss-clean": "0.1.1"
